# Wasserrakete_SS_2026

./: README.md  Wasserrakete_vertikaler_Start.ipynb  pyproject.toml  requirements.txt
